Actulizacion ejercicio-6 24/02 20:53 corrigiendo cositas

--- a/tercera clase/Ejercicios/Ejercicio 6/style.css
+++ b/tercera clase/Ejercicios/Ejercicio 6/style.css
@@ -35,7 +35,7 @@ table{
     width: 30em;
     height: 13em;
     font-size: 1.1em;
-    margin-left: 2em;
+    margin: 2em;
 }
 
  tr > td:nth-child(1) {
