--- a/Ejercicios_1/Ejercicio3/css/style.css
+++ b/Ejercicios_1/Ejercicio3/css/style.css
@@ -1,12 +1,24 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
     position: relative;
-    
+    overflow-x: hidden;
+    max-width: 100vw;
 }
+
 
 header {
     margin-bottom: -95px;
+}
+
+hr {
+    border: 1px solid orange;
+    max-width: 100vw;
+}
+
+hr.sep{
+    border: 1px solid #F1EDED;
+    max-width: 100vw;    
 }
 
 header > ul {
@@ -56,7 +68,9 @@ section#personal > h2 {
 
 section#personal > p{
     left: 35%;
-    width: 50%;
+    bottom: -0.49em;
+    margin-bottom: 2em;
+    width: 50em;
     overflow: auto;
 }
 
@@ -65,26 +79,26 @@ section#skill > h2.titule,
 section#educ > h2.titule{
     left: 5%;
     color: orange;
-    top: 4em;
+    top: 1.5em;
 }
 
 section#exp > h2.jobtitule {
     left: 35%;
-    top: 38px;
+    top: -0.90em;
     margin-bottom: 1%;
     margin-top: 1%;
 }
 
 section#exp > p.jobexplain {
     left: 35%;
-    bottom: -35px;
+    bottom: 2em;
     width: 50%;
     overflow: auto;
 }
 
 section#skill > ul {
     left: 35%;
-    bottom: -35px;
+    bottom: 1em;
     
 }
 
@@ -94,14 +108,14 @@ section#skill > ul > li{
 
 section#educ> h2.educationtitule {
     left: 35%;
-    top: 38px;
+    top: -0.65em;
     margin-bottom: 1%;
     margin-top: 1%;
 }
 
 section#educ > p.educationexplain {
     left: 35%;
-    bottom: -35px;
+    bottom: 1.10em;
     width: 50%;
     overflow: auto;
 }
