--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_10/css/hamburgers-master/own-css/style.css
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_10/css/hamburgers-master/own-css/style.css
@@ -1,3 +1,6 @@
+@import url(../dist/hamburgers.css);
+
+
 *{
     margin: 0;
     padding: 0;
@@ -14,7 +17,7 @@ body {
 
 body > div {
     grid-area: 1;
-    background-color: rgba(201, 195, 195, 0.699);
+    background-color: rgba(0, 0, 0, 0.699);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -26,6 +29,7 @@ body > div > h3{
     font-size: 6vmin;
     margin-bottom: 2vmin;
     margin-left: 16vmin;
+    color: white;
 }
 
 body > section > nav.navegation {
@@ -34,7 +38,8 @@ body > section > nav.navegation {
     bottom: 3vmin;
     animation: nav 100ms;
     float: right;
-    width: 80vw;
+    width: 65vmin;
+    transform: scale(y);  
 }
 
 
@@ -43,16 +48,18 @@ body > section > nav.navegation > ul {
   flex-direction: column;
   justify-items: center;
   justify-content: center;
-  background-color: rgb(180, 185, 192);
+  background-color: rgb(109, 109, 109);
+  
   
 }
 
 body > section > nav.navegation > ul > li{
     list-style-type: none;
     padding: 4vmin;
-    border: 1px solid rgb(161, 161, 161);
+    border: 1px solid rgb(255, 255, 255);
     font-size: 5vmin;
     text-align: center;
+    color: white;
 
 }
 
@@ -62,5 +69,5 @@ body > section {
 
 body > footer {
     grid-area: 3;
-    background-color: rgba(201, 195, 195, 0.699);
+    background-color: rgba(0, 0, 0, 0.699);
 }
