--- a/Clase Javascript/DOM/Ejercicios/Ejercicio_13/css/style.css
+++ b/Clase Javascript/DOM/Ejercicios/Ejercicio_13/css/style.css
@@ -9,6 +9,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 10vh 1fr;
+    background-color: rgb(53, 48, 48);
 }
 
 body > header {
@@ -19,7 +20,11 @@ body > header {
     justify-content: center;
     align-items: center;
     font-size: 3vmin;
-    margin-right: 4vw;
+    margin-right: 3.0vw;
+}
+
+body > header > h1{
+    color: white;
 }
 
 main > table {
@@ -27,35 +32,52 @@ main > table {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80vw;
+    width: 77vw;
+    height: 100vh;
     justify-content: center;
     align-self: center;
-    margin-left: 12vmin;
+    margin-left: 10vw;
 }
 
 main > table > thead > tr >th,
 main > table > tbody >tr > td{
-    border: 2px solid black;
+    border: 0.1vmin solid rgb(53, 48, 48);
     width: 25vmin;
     height: 6vmin;
     text-align: center;
+
 }
 
 main > table > thead > tr >th {
     font-size: 2.5vmin;
     font-weight: bold;
-    background-color: rgb(102, 54, 236);
+    background-color: rgb(18, 16, 19);
     color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+main > table > thead > tr >th:nth-child(1){
+    width: 10vmin;
 }
 
 main > table > tbody >tr > td:nth-child(1){
+    width: 10vmin;
+}
+
+main > table > tbody >tr > td:nth-child(2){
     font-weight: bold;
 } 
 
 main > table > tbody >tr > td{
     font-size: 2vmin;
+    background-color: rgb(236, 232, 232);
 }
 
+img{
+    width: 9vmin;
+    height: 9vmin;
+}
 
 main > table > tbody >tr > td.Alive{
     background-color: rgb(122, 243, 122);
